# mir-eval-autolab

./: .coveragerc  .env.example  .eslintignore  .gitignore  .pre-commit-config.yaml  Dockerfile  MCP_README.md  README.md  UV_README.md  auto_improver.py  config.yaml  example_grid_config.yaml  improver_cli.py  mcp_client.py  mcp_server.py  mcp_server_extensions.py  pyproject.toml  requirements.txt  run_auto_improver.py  run_evaluate.py  run_grid_search.py  setup_claude_integration.py
algos/: cotta.md  echoe.md  faze.md  kromar.md  mirin.md  nuonde.md  onde.md  onde_five.md  onde_seven.md  pinia.md  pzstd.md  tpcn.md  unia.md
data/synthesized/labels/: 11_mixed_melody_perc.csv  13_smooth_vibrato.csv  16_staccato.csv  18_octave_errors.csv  1_basic_sine.csv  4_pitch_mod.csv  6_reverb_short.csv
datasets/synthesized/labels/: 12_complex_mix.csv  14_pitch_bend.csv  15_slow_attack.csv  17_pianissimo.csv  19_inharmonicity.csv  20_legato.csv  21_vocal_imitation.csv  3_dynamics_change.csv  7_chords.csv  8_polyphony.csv  9_10_percussion_only.csv
db/: mcp_server_state.db
mcp_server_logic/: code_tools.py  core.py  db_utils.py  evaluation_tools.py  improvement_loop.py  job_manager.py  llm_tools.py  session_manager.py  visualization_tools.py
scripts/: clean_workspace.py  manage_workspace.py  manage_workspace.sh
src/: __init__.py
src/cli/: __init__.py  auto_improver.py  evaluate_cli.py  grid_search_cli.py  improver_cli.py  llm_client.py  mcp_server.py  mirai.py  setup_claude_integration.py
src/data_generation/: generate_all.py  synthesizer.py
src/detectors/: __init__.py  base_detector.py  cotta_detector.py  criteria_detector.py  echoe_detector.py  faze_detector.py  kromar_detector.py  mirin_detector.py  nuonde_detector.py  onde_detector.py  onde_five_detector.py  onde_seven_detector.py  pinia_detector.py  pzstd_detector.py  tpcn_detector.py  unia_detector.py
src/detectors/modules/: __init__.py
src/detectors/modules/filterbank/: __init__.py  base_filterbank.py  cqt_filterbank.py  stft_filterbank.py
src/evaluation/: __init__.py  evaluation_core.py  evaluation_frame.py  evaluation_io.py  evaluation_runner.py
src/evaluation/grid_search/: __init__.py  core.py
src/mcp_server_logic/: code_tools.py  core.py  db_utils.py  evaluation_tools.py  improvement_loop.py  job_manager.py  llm_tools.py  mcp_server.py  mcp_server_extensions.py  schemas.py  serialization_utils.py  session_manager.py  utils.py  visualization_tools.py
src/mcp_server_logic/prompts/: assess_improvement.j2  explain_improvement.j2  improve_code.j2  suggest_improvement_hypothesis.j2
src/prepare/: data_generator.py
src/science_automation/: __init__.py  exploration_strategy.py  hypothesis_generator.py  paper_generator.py  research_notebook.py
src/structures/: note.py
src/templates/: paper_template.md  report_template.md
src/utils/: __init__.py  audio_utils.py  detection_result.py  detector_utils.py  exception_utils.py  json_utils.py  logging_utils.py  misc_utils.py  path_utils.py  pitch_utils.py
src/visualization/: __init__.py  code_impact_graph.py  performance_heatmap.py  plots.py
tests/: conftest.py  test_base_detector.py  test_db_utils.py  test_detectors.py  test_evaluation_core.py  test_evaluation_tools.py  test_job_manager.py  test_llm_tools.py  test_session_manager.py  test_synthesizer.py  test_utils.py
tests/data/: ref_bad_cols.csv  ref_error.json  ref_header.csv  ref_invalid_data.csv  ref_missing_key.json  ref_no_header.csv  ref_partial_header.csv  ref_valid.json
tests/evaluation/: __init__.py  test_evaluation_frame.py  test_evaluation_io.py  test_evaluation_runner.py
tests/evaluation/grid_search/: test_core.py
tests/unit/cli/: conftest.py  test_llm_client.py  test_mirai.py
tests/unit/data_generation/: test_generate_all.py  test_synthesizer.py
tests/unit/detectors/: test_base_detector.py  test_init.py
tests/unit/evaluation/: test_evaluation_frame.py  test_evaluation_io.py  test_evaluation_runner.py  test_grid_search_core.py
tests/unit/mcp_server_logic/: test_code_tools.py  test_core.py  test_db_utils.py  test_evaluation_tools.py  test_job_manager.py  test_llm_tools.py  test_schemas.py  test_session_manager.py
tests/unit/structures/: test_note.py
tests/unit/utils/: test_audio_utils.py  test_detection_result.py  test_detector_utils.py  test_exception_utils.py  test_json_utils.py  test_logging_utils.py  test_misc_utils.py  test_path_utils.py  test_pitch_utils.py
tests/utils/: test_audio_utils.py  test_detection_result.py  test_detector_utils.py  test_json_utils.py  test_logging_utils.py  test_path_utils.py  test_path_utils_detector.py  test_path_utils_dirs.py  test_pitch_utils.py
