[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirex-detector"
version = "0.1.0"
description = "MIREX音楽情報検索検出器"
readme = "MCP_README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy", 
    "python-dotenv",
    "librosa",
    "matplotlib",
    "mir_eval",
    "pandas",
    "scikit-learn",
    "tensorflow",
    "torch",
    "tqdm",
    "pydantic",
    "pyaudio",
    "soundfile",
    "seaborn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
