[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirex-detector"
version = "0.1.0"
description = "MIREX音楽情報検索検出器"
readme = "MCP_README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy", 
    "python-dotenv",
    "librosa",
    "matplotlib",
    "mir_eval",
    "pandas",
    "scikit-learn",
    "tensorflow >= 2.10",
    "tqdm",
    "pydantic",
    "pyaudio",
    "soundfile",
    "seaborn",
    "PyYAML",
    "requests >= 2.31.0",
    "fastapi",
    "uvicorn[standard]",
    "pillow",
    "typer >= 0.9.0",
    "tenacity",
    "httpx >= 0.27.0",
    "websockets >= 11.0",
    "rich >= 13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
